Basic connection, can call functions with one parameter, no functionality, basic gui, still errors on server