@@ -23,9 +23,12 @@ javafx {
 
 application {
     mainClass = 'main.AppMain'
+    applicationDefaultJvmArgs = ["--enable-native-access=javafx.graphics"]
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.2'
+
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
@@ -33,4 +36,34 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+jar {
+    manifest {
+        attributes(
+                'Main-Class': application.mainClass.get()
+        )
+    }
+}
+
+tasks.register('fatJar', Jar) {
+    archiveClassifier = 'all'
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+
+    manifest {
+        attributes(
+                'Main-Class': application.mainClass.get()
+        )
+    }
+
+    // Zugriff auf SourceSets über Extensions (Gradle 9 kompatibel)
+    def sourceSets = project.extensions.getByType(SourceSetContainer)
+    from(sourceSets.named("main").get().output)
+
+    // Dependencies einpacken
+    from({
+        configurations.runtimeClasspath
+                .filter { it.name.endsWith("jar") }
+                .collect { zipTree(it) }
+    })
 }
